<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:id="@+id/natural"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:orientation="horizontal"
                android:background="@drawable/civic">

            </LinearLayout>



            <LinearLayout
                android:id="@+id/imageLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <agency.tango.android.avatarview.views.AvatarView
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="80dp"/>

                <TextView
                    android:id="@+id/unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textColor="@color/weekcolor"
                    android:letterSpacing="0.025"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/nopol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.025"
                    android:textSize="14dp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>





            <LinearLayout
                android:layout_below="@+id/natural"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:letterSpacing="0.025"
                        android:text="@string/nosin"
                        android:textAllCaps="true"
                        android:textColor="@color/timecolor"
                        android:textSize="14dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="29dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/nosin"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:letterSpacing="0.025"
                            android:textColor="@color/schedulecolor"
                            android:textSize="14dp"

                            />


                    </LinearLayout>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="#99A1AC"
                    android:layout_marginTop="15dp"/>


                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/noka"
                        android:textAllCaps="true"
                        android:textSize="14dp"
                        android:letterSpacing="0.025"
                        android:textColor="@color/timecolor"
                        android:layout_marginLeft="25dp"/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/noka"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:gravity="center"
                            android:letterSpacing="0.025"
                            android:textColor="@color/schedulecolor"
                            android:textSize="14dp"

                            />

                    </LinearLayout>

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="#99A1AC"
                    android:layout_marginTop="20dp"/>



                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/warna"
                        android:textAllCaps="true"
                        android:textSize="14dp"
                        android:letterSpacing="0.025"
                        android:textColor="@color/timecolor"
                        android:layout_marginLeft="25dp"/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/warna"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:gravity="center"
                            android:letterSpacing="0.025"
                            android:textColor="@color/schedulecolor"
                            android:textSize="14dp"

                            />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="#99A1AC"
                    android:layout_marginTop="20dp"/>


                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bank"
                        android:textAllCaps="true"
                        android:textSize="14dp"
                        android:letterSpacing="0.025"
                        android:textColor="@color/timecolor"
                        android:layout_marginLeft="25dp"/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/bank"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:gravity="center"
                            android:letterSpacing="0.025"
                            android:textColor="@color/schedulecolor"
                            android:textSize="14dp"

                            />

                    </LinearLayout>

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="#99A1AC"
                    android:layout_marginTop="20dp"/>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cabang"
                        android:textAllCaps="true"
                        android:textSize="14dp"
                        android:letterSpacing="0.025"
                        android:textColor="@color/timecolor"
                        android:layout_marginLeft="25dp"/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/cabang"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:gravity="center"
                            android:letterSpacing="0.025"
                            android:textColor="@color/schedulecolor"
                            android:textSize="14dp"

                            />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <!--here-->


        </RelativeLayout>

    </ScrollView>


    <TextView
        android:id="@+id/stnk"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:letterSpacing="0.025"
        android:textColor="@color/dpnamecolor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textSize="18dp"/>


</RelativeLayout>
